fixed margins product on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -213,7 +213,7 @@ body {
   margin: 50px 0;
 }
 .contact-form {
-  width: 80%;
+  width: 100%;
   max-width: 500px;
   margin: auto auto;
 
@@ -259,7 +259,7 @@ body {
 }
 
 .products-table-container {
-  width: 80%;
+  width: 100%;
   margin: 0 auto;
 }
 
